@@ -1,9 +1,8 @@
 <HTML>
 <BODY>
-Integration with Jetty 6.1. Jetty 6 is a new implementation of the popular Jetty 5 HTTP server able to leverage
-NIO.
+Integration with Jetty 7.0. Jetty 7 is a new implementation of the popular Jetty HTTP server able to leverage NIO.
 
 @since Restlet 1.0
-@see <a href="http://jetty.mortbay.org/">Jetty HTTP server</a>
+@see <a href="http://www.eclipse.org/jetty/">Jetty HTTP server</a>
 </BODY>
 </HTML>
